--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
     <!-- Hero Header -->
     <div class="header-hero">
         <h1>SHIVKUMAR PATIL</h1>
-        <div class="title">Senior Technical Project Manager | QA-DevOps Leader | CSM</div>
+        <div class="title">Senior Technical Project Manager | QA-DevOps Leader | CSM | AI/ML</div>
         <div class="tagline">16+ Years Driving Quality, Innovation & Digital Transformation in Banking & Payments</div>
     </div>
 
@@ -414,7 +414,7 @@
                 </div>
                 <div class="contact-item">
                     <i class="fas fa-envelope"></i>
-                    <a href="mailto:shivkumar.patil@email.com">shivkumar.patil@email.com</a>
+                    <a href="mailto:shivkumar.patil@email.com">smpshiva@gmail.com</a>
                 </div>
                 <div class="contact-item">
                     <i class="fab fa-linkedin"></i>
