--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html >
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -393,7 +393,7 @@
     <!-- Hero Header -->
     <div class="header-hero">
         <h1>SHIVKUMAR PATIL</h1>
-        <div class="title">Senior Technical Project Manager | QA-DevOps Leader | CSM | AI/ML</div>
+        <div class="title">Senior Technical Project Manager | QA-DevOps Leader | CSM</div>
         <div class="tagline">16+ Years Driving Quality, Innovation & Digital Transformation in Banking & Payments</div>
     </div>
 
@@ -414,7 +414,7 @@
                 </div>
                 <div class="contact-item">
                     <i class="fas fa-envelope"></i>
-                    <a href="mailto:shivkumar.patil@email.com">smpshiva@gmail.com</a>
+                    <a href="mailto:shivkumar.patil@email.com">shivkumar.patil@email.com</a>
                 </div>
                 <div class="contact-item">
                     <i class="fab fa-linkedin"></i>
@@ -476,6 +476,29 @@
                 <h2 class="section-title"><i class="fas fa-user-circle"></i> Professional Summary</h2>
                 <div class="summary-text">
                     <strong>Senior Technical Project Manager & QA-DevOps Leader (CSM)</strong> with 16+ years driving test strategy, AI-assisted automation, and CI/CD transformation across AWS and Kubernetes/OpenShift for banking and payments. <strong>Tooling & Platform Owner</strong> leading full-cycle QA/DevOps stack evaluation—from POCs and security reviews to ROI and governance. Led enterprise modernization across <strong>11 products</strong>, established <strong>TCOE</strong>, and pioneered <strong>GenAI</strong> (GitHub Copilot + LLMs) for test acceleration in regulated environments.
+                </div>
+            </section>
+
+            <!-- Core Competencies -->
+            <section class="section">
+                <h2 class="section-title"><i class="fas fa-lightbulb"></i> Core Competencies</h2>
+                <div class="tech-grid">
+                    <div class="tech-category">
+                        <strong>Leadership & Strategy</strong>
+                        <span>Team Leadership • Stakeholder Management • Strategic Planning • Change Management • Cross-functional Collaboration • Vendor Management • Budget Management • Risk Assessment</span>
+                    </div>
+                    <div class="tech-category">
+                        <strong>Communication & Interpersonal</strong>
+                        <span>Technical Documentation • Executive Reporting • Client Presentations • Training & Mentoring • Requirement Gathering • Conflict Resolution • Negotiation</span>
+                    </div>
+                    <div class="tech-category">
+                        <strong>Problem Solving & Innovation</strong>
+                        <span>Root Cause Analysis • Critical Thinking • Process Optimization • Continuous Improvement • Decision Making • Innovation Leadership</span>
+                    </div>
+                    <div class="tech-category">
+                        <strong>Project & Program Management</strong>
+                        <span>Sprint Planning • Backlog Management • Release Planning • Resource Allocation • Timeline Management • Dependency Tracking • Quality Assurance</span>
+                    </div>
                 </div>
             </section>
 
