--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
     <!-- Hero Header -->
     <div class="header-hero">
         <h1>SHIVKUMAR PATIL</h1>
-        <div class="title">Senior Technical Project Manager | QA-DevOps Leader | CSM</div>
+        <div class="title">Senior Technical Project Manager | QA-DevOps Leader | AI/ML | CSM</div>
         <div class="tagline">16+ Years Driving Quality, Innovation & Digital Transformation in Banking & Payments</div>
     </div>
 
@@ -414,7 +414,7 @@
                 </div>
                 <div class="contact-item">
                     <i class="fas fa-envelope"></i>
-                    <a href="mailto:shivkumar.patil@email.com">shivkumar.patil@email.com</a>
+                    <a href="mailto:smpshiva@gmail.com">smpshiva@gmail.com</a>
                 </div>
                 <div class="contact-item">
                     <i class="fab fa-linkedin"></i>
@@ -475,7 +475,7 @@
             <section class="section">
                 <h2 class="section-title"><i class="fas fa-user-circle"></i> Professional Summary</h2>
                 <div class="summary-text">
-                    <strong>Senior Technical Project Manager & QA-DevOps Leader (CSM)</strong> with 16+ years driving test strategy, AI-assisted automation, and CI/CD transformation across AWS and Kubernetes/OpenShift for banking and payments. <strong>Tooling & Platform Owner</strong> leading full-cycle QA/DevOps stack evaluation—from POCs and security reviews to ROI and governance. Led enterprise modernization across <strong>11 products</strong>, established <strong>TCOE</strong>, and pioneered <strong>GenAI</strong> (GitHub Copilot + LLMs) for test acceleration in regulated environments.
+                    Senior Technical Project Manager & Certified Scrum Master with 16+ years transforming QA-DevOps in tier-1 banking and payments. Lead global teams of 20+ and modernization across 11+ core-banking products, achieving 85%+ automation coverage, #1 defect-management rankings, and enterprise CI/CD adoption. As tooling/platform owner, drive technology evaluation, ROI cases, and governance. Pioneered GenAI-assisted QA in regulated financial environments, converting complexity into executive-ready roadmaps and reliable, high-throughput releases.
                 </div>
             </section>
 
