--- a/index.html
+++ b/index.html
@@ -850,14 +850,14 @@
                     <div class="experience-header">
                         <div class="job-title">Senior Software Test Engineer</div>
                         <div class="company-info">
-                            <span class="company-name"><i class="fas fa-building"></i> Oak Systems & Mphasis Limited</span>
+                            <span class="company-name"><i class="fas fa-building"></i> Oak Systems</span>
                             <span><i class="fas fa-map-marker-alt"></i> India</span>
                             <span class="date-range"><i class="fas fa-calendar-alt"></i> Mar 2008 - Apr 2009</span>
                         </div>
                         <div class="clients"><i class="fas fa-briefcase"></i> Client: Symantec Corporation</div>
                     </div>
                     <ul class="experience-bullets">
-                        <li>Executed test automation for functional, integration, and API testing; managed defect tracking for ERP applications</li>
+                        <li>•	Written and Executed test automation for functional, integration, and API testing, managed defect tracking for multiple Symantec applications including salesforce & ERP applications</li>
                     </ul>
                 </div>
             </section>
