--- a/index.html
+++ b/index.html
@@ -891,6 +891,10 @@
                 <h2>Technical Skills</h2>
                 <div class="skills-grid">
                     <div class="skill-card">
+                        <div class="skill-category"><i class="fas fa-university"></i> Banking Domain</div>
+                        <div class="skill-list">Core Banking Systems: FIS IBS, Deposits, Loans, Commercial Banking, Retail Banking, Payment Processing, Financial Transactions, IBM FTM, ACH/Wire Transfers, Account Management</div>
+                    </div>
+                    <div class="skill-card">
                         <div class="skill-category"><i class="fas fa-cloud"></i> Cloud & Containers</div>
                         <div class="skill-list">AWS, EKS, ECR, Lambda, S3, CloudWatch, Kubernetes, OpenShift, Docker</div>
                     </div>
@@ -925,17 +929,36 @@
                 </div>
             </section>
 
-            <!-- Education & Certifications -->
+            <!-- Education -->
             <section id="education">
-                <h2>Education & Certifications</h2>
+                <h2>Education</h2>
                 <div class="education-grid">
                     <div class="education-card">
                         <div class="education-title"><i class="fas fa-graduation-cap"></i> Bachelor of Engineering</div>
                         <div class="education-institution">Gulbarga University, India</div>
                     </div>
+                </div>
+            </section>
+
+            <!-- Certifications -->
+            <section id="certifications">
+                <h2>Certifications</h2>
+                <div class="education-grid">
                     <div class="education-card">
                         <div class="education-title"><i class="fas fa-certificate"></i> Certified Scrum Master (CSM)</div>
                         <div class="education-institution">Scrum Alliance | ID: 001547545</div>
+                    </div>
+                    <div class="education-card">
+                        <div class="education-title"><i class="fas fa-certificate"></i> GenAI Foundations on FY'2025</div>
+                        <div class="education-institution">Persistent Systems GenAI Overview, Prompt Engineering and GenAI tools Overview, ASVA overview, AI Agents and Agentic AI overview, Udacity and GenAI Hub</div>
+                    </div>
+                    <div class="education-card">
+                        <div class="education-title"><i class="fas fa-certificate"></i> Introduction to Generative AI</div>
+                        <div class="education-institution">Google</div>
+                    </div>
+                    <div class="education-card">
+                        <div class="education-title"><i class="fas fa-certificate"></i> GenAI Assisted Coding</div>
+                        <div class="education-institution">Persistent Systems</div>
                     </div>
                 </div>
             </section>
