--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Shivkumar Patil - Senior QA Architect & Technical Program Manager with 17+ years experience in Quality Engineering, DevOps transformation, Test Automation, and GenAI.">
+    <meta name="description" content="Shivkumar Patil - Senior QA Architect & Technical Project Manager with 17+ years experience in Quality Engineering, DevOps transformation, Test Automation, and GenAI.">
     <meta name="author" content="Shivkumar Patil">
     <meta name="keywords" content="QA Architect, Technical Program Manager, Test Automation, DevOps Leader, CI/CD, GenAI, Scrum Master, Banking Technology, Selenium, Playwright">
     
