--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta name="twitter:title" content="Shivkumar Patil - Senior QA Architect">
     <meta name="twitter:description" content="17+ years in Quality Engineering, DevOps transformation, and GenAI. #1 defect management rankings, 85%+ automation coverage.">
     
-    <title>Shivkumar Patil - Senior QA Architect & Technical Program Manager</title>
+    <title>Shivkumar Patil - Senior QA Architect & Technical Project Manager</title>
     
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
