Update Open Graph description for clarity

--- a/tpm.html
+++ b/tpm.html
@@ -9,7 +9,7 @@
     
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Shivkumar Patil - Senior Technical Project Manager">
-    <meta property="og:description" content="Senior Technical Project Manager with 17+ years delivering enterprise programs across Banking, Fintech, and Insurance. Expert in stakeholder management and Agile transformation.">
+    <meta property="og:description" content="Senior Technical Project Manager with 17+ years delivering enterprise programs across Banking, Fintech, and Insurance Industries. Expert in stakeholder management and Agile transformation.">
     <meta property="og:image" content="https://smpshiva.github.io/shivkumar-patil-resume/preview-image.png">
     <meta property="og:url" content="https://smpshiva.github.io/shivkumar-patil-resume/tpm.html">
     <meta property="og:type" content="website">
