Remove 'SDET Lead' from keywords and headline

--- a/tpm.html
+++ b/tpm.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Shivkumar Patil — Technical Delivery Manager & Principal QA Architect | 17+ years BFSI | Relocating to Pune, India April 2026">
-    <meta name="keywords" content="Technical Delivery Manager, QA Architect, SDET Lead, DevOps, Program Manager, BFSI, Banking, GenAI, Pune India, CSM">
+    <meta name="keywords" content="Technical Delivery Manager, QA Architect, DevOps, Program Manager, BFSI, Banking, GenAI, Pune India, CSM">
     <title>Shivkumar Patil — Technical Delivery Manager | Principal QA Architect | BFSI</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -243,7 +243,6 @@
         <p class="headline">
             Technical Delivery Manager<span>|</span>
             Principal QA Architect<span>|</span>
-            SDET Lead<span>|</span>
             DevOps<span>|</span>
             17+ Years BFSI<span>|</span>
             AI/GenAI<span>|</span>
